Revision history for Perl extension AnyEvent.

TODO: document TCP_*** constants
TODO: catch AE::xxx for anyevent strict and anyevent debug
TODO: anyevent::trace? or debug tracing all watchers?
TODO: anyevent strict checking for $_ changes?

TODO: Kevin Ryde         (3.8K)   1 inbox       Glib child processes
TODO: keeps alive, self-reference, storabel et al.
	- INCOMPATIBLE CHANGE: AnyEvent::DNS resource records now include
          the TTL as fourth element - this affects ->resolve directly,
          and ->request and ->dns_unpack indirectly. Convenience functions
          such as AnyEvent::DNS::{a,txt,mx,srv} are not affected.
        - some read types (regex, netstring, json, storable) could
          errornously keep an AE::Handle object alive on their own
          (reported by Mohammad Toossi).
	- add support for (currently third-party) AnyEvent::Impl::FLTK.
        - many read types in AnyEvent::Handle would malfunction during
          transitions to TLS because of a "delete $self->{rbuf}".
          (reported by Gerald Galster).

5.34  Thu May 12 09:59:41 CEST 2011
	- AE::TLS didn't support both cert_file and key at the same time,
          due to some copy&paste bug (reported and analyzed by vti).
	- improve AE::Handle timeout documentation slightly.

5.33  Mon Feb  7 21:51:41 CET 2011
	- never appeared on CPAN, for unknown reasons.
	- AnyEvent::Handle on_connect_error - do not try to destroy a handle
          object when it's already gone (analyzed by Ryan Bullock).
	- update idna algorithm(s) to UTS#46 version 6.0.0.
        - preserve trailing dot in idn_to_ascii - testsuite says to preserve,
          uts46 says it's an error, and testsuite makes more sense.
        - remove leading dots in idn_to_ascii - testsuite says to remove,
          uts46 says it's an error, and testsuite makes more sense.
        - fixed a bug in idn ignored character processing.
        - passes the uts46 6.0.0 testsuite except for three cases which