@@ -383,30 +383,37 @@ guard.
 
 =cut
 
-if (!$ENV{PERL_ANYEVENT_AVOID_GUARD} && eval { require Guard; $Guard::VERSION >= 0.5 }) {
-   warn "AnyEvent::Util: using Guard module to implement guards.\n" if $AnyEvent::VERBOSE >= 8;
-   *guard = \&Guard::guard;
-} else {
-   warn "AnyEvent::Util: using pure-perl guard implementation.\n" if $AnyEvent::VERBOSE >= 8;
+sub guard(&) {
+   eval q{ # poor man's autoloading {}
+      if (!$ENV{PERL_ANYEVENT_AVOID_GUARD} && eval { require Guard; $Guard::VERSION >= 0.5 }) {
+         warn "AnyEvent::Util: using Guard module to implement guards.\n" if $AnyEvent::VERBOSE >= 8;
+         *guard = \&Guard::guard;
+      } else {
+         warn "AnyEvent::Util: using pure-perl guard implementation.\n" if $AnyEvent::VERBOSE >= 8;
 
-   *AnyEvent::Util::guard::DESTROY = sub {
-      local $@;
+         *AnyEvent::Util::guard::DESTROY = sub {
+            local $@;
 
-      eval {
-         local $SIG{__DIE__};
-         ${$_[0]}->();
-      };
+            eval {
+               local $SIG{__DIE__};
+               ${$_[0]}->();
+            };
 
-      warn "runtime error in AnyEvent::guard callback: $@" if $@;
+            warn "runtime error in AnyEvent::guard callback: $@" if $@;
+         };
+
+         *AnyEvent::Util::guard::cancel = sub ($) {
+            ${$_[0]} = sub { };
+         };
+
+         *guard = sub (&) {
+            bless \(my $cb = shift), "AnyEvent::Util::guard"
+         };
+      }
    };
+   die if $@;
 
-   *AnyEvent::Util::guard::cancel = sub ($) {
-      ${$_[0]} = sub { };
-   };
-
-   *guard = sub (&) {
-      bless \(my $cb = shift), "AnyEvent::Util::guard"
-   };
+   goto &guard;
 }
 
 =item AnyEvent::Util::close_all_fds_except @fds
